--- a/doc/MemoriaTFG.tex
+++ b/doc/MemoriaTFG.tex
@@ -190,7 +190,7 @@
 % La comanda \tutor mostra el nom del director
 % a la portada. Si hi ha més d'un tutor
 % es poden separar mitjançant la comanda \and.
-\tutor{Isaac Lera Castro}
+\tutor{Dr. Isaac Lera Castro}
 
 % La comanda \supervisor permet incloure el nom 
 % del professor de la UIB que avala el treball,
